force-app/main/default/objects/Inscricao__c/Inscricao__c.object-meta.xml
<CustomObject>
    <description>Registra as inscrições nos treinamentos</description>
    <label>Inscrição</label>
    <nameField>
        <displayFormat>ins-{00000}</displayFormat>
        <label>Inscricao Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inscrições</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>