force-app/main/default/objects/Inscricao__c/fields/Ativo__c.field-meta.xml
<CustomField>
    <fullName>Ativo__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Define o status da inscrição</description>
    <inlineHelpText>Informe o status da inscrição</inlineHelpText>
    <label>Ativo</label>
    <type>Checkbox</type>
</CustomField>