force-app/main/default/objects/Inscricao__c/fields/TreinamentoModuloId__c.field-meta.xml
<CustomField>
    <fullName>TreinamentoModuloId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Treinamento/Modulo inscrito</description>
    <inlineHelpText>Defina seu treinamento/modulo</inlineHelpText>
    <label>Treinamento Modulo</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Ativo__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Treinamento_Modulo__c</referenceTo>
    <relationshipLabel>Inscrições</relationshipLabel>
    <relationshipName>Inscricoes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>