force-app/main/default/objects/Inscricao__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Usuário inscrito</description>
    <inlineHelpText>Defina seu nome de usuário</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inscricoes</relationshipName>
    <type>Lookup</type>
</CustomField>